--- a/index.html
+++ b/index.html
@@ -318,10 +318,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://dark-deepweblinks.github.io/PGP-Guide-How-to-use-PGP-Encrypt-Decrypt-Message-by-GPG4WIN-Kleopatra/">https://dark-deepweblinks.github.io/PGP-Guide-How-to-use-PGP-Encrypt-Decrypt-Message-by-GPG4WIN-Kleopatra/</a><br>
+                <a target="_bLank" href="https://deepwebsiteslinks.s3.us-east-005.backblazeb2.com/PGP+Guide+%E2%80%93+How+to+use+PGP%3F+Encrypt+Decrypt+Message+by+GPG4WIN+Kleopatra/index.html">https://deepwebsiteslinks.s3.us-east-005.backblazeb2.com/PGP+Guide+%E2%80%93+How+to+use+PGP%3F+Encrypt+Decrypt+Message+by+GPG4WIN+Kleopatra/index.html</a><br>
+                <a target="_bLank" href="https://pgp-guide-how-to-use-pgp-git-978d44-the-dark-web-links-projects.vercel.app/">https://pgp-guide-how-to-use-pgp-git-978d44-the-dark-web-links-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://regal-maamoul-32bbfe.netlify.app/">https://regal-maamoul-32bbfe.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
